core/codegen/tests/ui-fail-stable/catch.stderr
error[E0463]: can't find crate for `rocket`
 --> tests/ui-fail-stable/catch.rs:1:14
  |
1 | #[macro_use] extern crate rocket;
  |              ^^^^^^^^^^^^^^^^^^^^ can't find crate

error[E0428]: the name `e5` is defined multiple times
  --> tests/ui-fail-stable/catch.rs:27:1
   |
24 | fn e5(_request: &Request) { }
   | ------------------------- previous definition of the value `e5` here
...
27 | fn e5(_request: &Request) { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ `e5` redefined here
   |
   = note: `e5` must be defined only once in the value namespace of this module
